@@ -5,8 +5,6 @@
  * Repo Branch class
  */
 
-require_once 'VersioncontrolLabel.php';
-
 /**
  * Represents a branch of code
  */
